--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "android:release": "cd android &&  ./gradlew assembleRelease",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.18",
+    "@react-navigation/native-stack": "^7.3.2",
+    "babel-plugin-module-resolver": "^5.0.2",
     "react": "19.0.0",
-    "react-native": "0.78.0"
+    "react-native": "0.78.0",
+    "react-native-mmkv": "^3.2.0",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.2",
+    "reactotron-react-native": "^5.1.12",
+    "reactotron-react-native-mmkv": "^0.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
