--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,6 +71,7 @@ def enableProguardInReleaseBuilds = false
  * this variant is about 6MiB larger per architecture than default.
  */
 def jscFlavor = 'io.github.react-native-community:jsc-android:2026004.+'
+def enableSeparateBuildPerCPUArchitecture = true
 
 android {
     ndkVersion rootProject.ext.ndkVersion
