--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@react-navigation/native": "^7.0.18",
     "@react-navigation/native-stack": "^7.3.2",
     "babel-plugin-module-resolver": "^5.0.2",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-mmkv": "^3.2.0",
+    "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
     "reactotron-react-native": "^5.1.12",
-    "reactotron-react-native-mmkv": "^0.2.8"
+    "reactotron-react-native-mmkv": "^0.2.8",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
